--- a/styles/style.css
+++ b/styles/style.css
@@ -7,25 +7,380 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  /* position: relative; */
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  position: relative;
   /* выше установили ограничения для секции */
+  display: flex;
+  align-items: center;
+  background-color: #f2f2f2;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  right: 0;
+  position: absolute;
+  /* z-index: -1; */
 }
 
 /* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.table__cell table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.logo {
+  width: 228px;
+  height: 32px;
+}
+.header__logo {
+  position: absolute;
+  z-index: 2;
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  margin-left: 64px;
+  position: relative;
+  width: 730px;
+  font-size: 102px;
+  font-weight: bold;
+  line-height: 96px;
+  z-index: 2;
+}
+
+.header__subtitle {
+  position: absolute;
+  z-index: 2;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+
+}
+
+.content {
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
+
+}
+
+.description {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  /* position: absolute; */
+}
+
+.two-columns {
+  display: flex;
+  width: 80%;
+  /* border: 1px solid red; */
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  margin: 0;
+}
+
+.two-columns__brief {
+  display: flex;
+  width: 175px;
+  /* border: 1px solid red; */
+  margin: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+
+}
+
+.two-columns__paragraph {
+  margin: 0;
+  /* border: 1px dotted red; */
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+
+}
+
+.two-columns_main-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 80%;
+  min-width: 784px;
+  margin: 0;
+}
+
+.p2 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.digits {
+  display: flexbox;
+  flex-direction: column;
+  justify-content: center;
+  /* position: absolute;  */
+}
+
+.section-title {
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  margin: auto;
+  margin-top: 100px;
+  width: 60%;
+
+
+}
+
+.section-subtitle {
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: auto;
+  margin-top: 20px;
+  width: 60%;
+
+}
+
+.table {
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1100px;
+  z-index: 2;
+
+}
+
+.table__cell {
+  width: 250px;
+  /* border: 1px dotted red; */
+  margin-top: 60px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  /* border: 1px dotted red; */
+  margin: 0;
+  z-index: 2;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  /* border: 1px dotted red; */
+  margin: 0;
+  margin-top: 20px;
+  z-index: 2;
+
+}
+
+.feynman {
+  background-image: url(../images/feynman.png);
+  background-color: #f2f2f2;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  height: 890px;
+  position: relative;
+
+}
+
+.feynman__title {
+  margin: 0 auto;
+  padding-top: 100px;
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  z-index: 2;
+}
+
+.feynman__subtitle {
+  margin: 70px auto auto auto;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 2;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
+  z-index: 1;
+}
+
+.feynman__img {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 0;
+
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  overflow: hidden;
+  position: relative;
+}
+
+.section-title_theme_dark {
+  color: white;
+  position: relative;
+  z-index: 2;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+  position: relative;
+  z-index: 2;
+}
+.table_theme_dark {
+  position: relative;
+  z-index: 2;
+}
+.table__cell_theme_dark {
+  width: 200px;
+  /* border: 1px dotted red; */
+  margin-top: 60px;
+}
+
+.table__heading_theme_dark {
+  color: white;
+}
+
+.table__text_theme_dark {
+  color: white;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  z-index: 0;
+  /* opacity: .99; */
+}
+.footer {
+  display: flex;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  background-color: #1f1f1f;
+  color: white;
+  min-height: 350px;
+  justify-content: center;
+  /* border: 1px dotted red; */
+}
+.footer__columns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  /* border: 1px dotted red; */
+
+}
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+
+}
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  text-align: left;
+  /* border: 1px dotted red; */
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+.footer__column_content_info {
+  /* border: 1px dotted red; */
+
+}
+.footer__column_content_social {
+  /* border: 1px dotted red; */
+}
+.footer__column-heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+  /* border: 1px dotted red; */
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+
+}
+.footer__column-links {
+  margin-top: 0;
+  margin-bottom: 16px;
+  /* border: 1px dotted red; */
+  list-style-type: none;
+  padding-left: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+.footer__column-link {
+  color: white;
+  text-decoration: none;
+}
+.footer__column-link:hover {
+  text-decoration: underline;
+}
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin: 0 10px 0 0;
 }
