исправил замечания 1-го ревью 17 апр 2022

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,9 +30,14 @@
   position: absolute;
   /* z-index: -1; */
 }
-
+.table__cell {
+  width: 250px;
+  /* border: 1px dotted red; */
+  margin-top: 60px;
+  list-style-type: none;
+}
 /* и элемента с модификатором вида ключ-значение */
-.table__cell table__cell_theme_dark {
+.table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
@@ -40,10 +45,12 @@
 }
 
 .logo {
+  background-image: url(../images/logo_place_header.svg);
+  background-size: cover;
   width: 228px;
   height: 32px;
 }
-.header__logo {
+.logo__place_header {
   position: absolute;
   z-index: 2;
   top: 30px;
@@ -51,9 +58,10 @@
 }
 
 .header__title {
-  margin-left: 64px;
+  /*margin-left: 64px;*/
+  margin: 0 0 0 64px;
   position: relative;
-  width: 730px;
+  max-width: 730px;
   font-size: 102px;
   font-weight: bold;
   line-height: 96px;
@@ -61,11 +69,15 @@
 }
 
 .header__subtitle {
+  margin: 0;
   position: absolute;
   z-index: 2;
   left: 64px;
   bottom: 30px;
-  width: 388px;
+  max-width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
 }
 
 .header__main-illustration {
@@ -75,6 +87,7 @@
   right: 0;
   bottom: 0;
   z-index: 1;
+  object-fit: cover;
 }
 
 .header__link {
@@ -111,7 +124,7 @@
 
 .two-columns__brief {
   display: flex;
-  width: 175px;
+  max-width: 175px;
   /* border: 1px solid red; */
   margin: 0;
   line-height: 1.2;
@@ -121,16 +134,7 @@
 
 }
 
-.two-columns__paragraph {
-  margin: 0;
-  /* border: 1px dotted red; */
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-
-}
-
-.two-columns_main-text {
+.two-columns__main-text {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -139,12 +143,21 @@
   margin: 0;
 }
 
-.p2 {
+.two-columns__paragraph {
+  margin: 0;
+  /* border: 1px dotted red; */
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.two-columns__paragraph:nth-child(2) {
   margin-top: 30px;
   margin-bottom: 30px;
+
 }
 
 .two-columns__span-accent {
+  /* display: inline-block; */
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
@@ -165,8 +178,6 @@
   margin: auto;
   margin-top: 100px;
   width: 60%;
-
-
 }
 
 .section-subtitle {
@@ -177,7 +188,6 @@
   margin: auto;
   margin-top: 20px;
   width: 60%;
-
 }
 
 .table {
@@ -194,11 +204,7 @@
 
 }
 
-.table__cell {
-  width: 250px;
-  /* border: 1px dotted red; */
-  margin-top: 60px;
-}
+
 
 .table__heading {
   line-height: 1.15;
@@ -233,7 +239,7 @@
 .feynman__title {
   margin: 0 auto;
   padding-top: 100px;
-  width: 648px;
+  max-width: 648px;
   text-align: center;
   line-height: 1.15;
   font-size: 120px;
@@ -311,16 +317,20 @@
   width: 877px;
   height: 877px;
   z-index: 0;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
+
   /* opacity: .99; */
 }
 .footer {
   display: flex;
+  justify-content: center;
   padding-top: 60px;
   padding-bottom: 40px;
+  min-height: 350px;
+  box-sizing: border-box;
   background-color: #1f1f1f;
   color: white;
-  min-height: 350px;
-  justify-content: center;
   /* border: 1px dotted red; */
 }
 .footer__columns {
