после 2-го ревью 17 апр 2022

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
+  top: 64px;
   right: 0;
   position: absolute;
   /* z-index: -1; */
@@ -45,7 +46,7 @@
   width: 228px;
   height: 32px;
 }
-.logo__place_header {
+.logo_place_header {
   position: absolute;
   z-index: 2;
   top: 30px;
@@ -254,6 +255,7 @@
 .feynman__link {
   position: absolute;
   right: 48px;
+  top: 50%;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
