--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -1,6 +1,6 @@
 .khan__book-container {
     /* position: relative; */
-    height: 608px;
+    /* height: 608px; */
     display: flex;
     align-items: flex-start;
     margin: 68px 0 0 0;
