--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 80px;
+    margin: 80px auto 0 auto;
+    padding: 0;
+    list-style-type: none;
 }
